# NeilOS-Old

./: .gitignore  newlib_build.txt
NeilOS/: Makefile  Makefile.dep  bootimg  build.sh  fs.sh  linker.ld  refresh.sh  reload.sh  vmware.sh
NeilOS.xcodeproj/: project.pbxproj
NeilOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NeilOS/filesystem/: cat  dup_test  echo  ls  pipe_test  shell
NeilOS/kernel/: kernel.c
NeilOS/kernel/boot/: boot.S  multiboot.h  x86_desc.S  x86_desc.h
NeilOS/kernel/common/: debug.h  lib.c  lib.h  log.c  log.h  time.c  time.h  types.c  types.h
NeilOS/kernel/drivers/: i8259.c  i8259.h
NeilOS/kernel/memory/: memory.c  memory.h  memory_asm.S  (+4 more)
libraries/NeilOS/: Makefile  NeilOS.h
libraries/graphics/: NSMatrix.cpp  NSMatrix.h  defs.h  graphics.cpp  graphics.h  graphics3d.cpp  svga.cpp  syscalls.S
newlib_source/newlib/libc/sys/neilos/: Makefile.am  crt0.c  syscalls.S  sysfile.c  sysfs.c  sysmem.c  sysmisc.c  sysproc.c  syssched.c  syssignal.c  syssockets.c  systermios.c  systime.c
newlib_source/newlib/libc/sys/neilos/sys/: dirent.h  ioctl.h  mman.h  resource.h  socket.h  termios.h  vfs.h
product/: main.c
programs/Calculator/: Controller.cpp  Controller.h  Makefile  main.cpp
programs/WindowServer/: Application.cpp  Boot.cpp  Boot.h  Desktop.cpp  Desktop.h  Event.cpp  Makefile  Window.cpp  Window.h  load.cpp  load.h  main.cpp
sysroot/: calc  cat  disk_speed_test  dup_test  echo  environ  fifo_test  hello.c  hello_gcc.s  hello_world.asm  ls  pipe_test  shell  signal_test  test
sysroot/lib/: charset.alias
(+290 files in other folders)
